--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,22 @@
   <string name="reset">Reset</string>
   <string name="run_toast">The run option was selected</string>
   <string name="reset_toast">The reset option was selected</string>
+  <string-array name="dummy_rolls">
+    <item>[1,6] = 7</item>
+    <item>[2,6] = 8</item>
+    <item>[3,7] = 10</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[4,7] = 11</item>
+    <item>[3,2] = 5</item>
+    <item>[8,2] = 10</item>
+  </string-array>
 </resources>
